Wait on context history check